fix: set instanceID as REST Query param
instead of in the body
