# src/routes/amt/linkPreferenceValidator.ts
@@ -3,10 +3,10 @@
  * SPDX-License-Identifier: Apache-2.0
  **********************************************************************/
 
-import { check } from 'express-validator'
+import { check, query } from 'express-validator'
 
 export const linkPreferenceValidator = (): any => [
   check('timeout').isInt({ min: 0 }),
-  check('instanceID').optional().isString()
+  query('instanceID').optional().isString()
 ]
 
